--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
+      "all_frames": true,
       "run_at": "document_end",
       "js": ["notranslate.js"]
     }
